@@ -5,6 +5,7 @@ Changelog of Jail
 - Fixed old configuration files being deleted when server restarts
 - Fixed configuration updater not working perfectly upon plugin installation
 - Fixed errors popping out upon mine set and player quit
+- Fixed all plugin tasks having wrong declaration due to updated PM API
 
 1.1.3 - 19/JUL/2017
 - Updated Russian language file
